<resources>
    <string name="app_name">FourFourTow</string>
<!--...........................................Splash Activity...................................-->
    <string name="start_sen">تمام فوتبال را پیشبینی کنید...</string>
    <string name="splash_btn_sign">ورود یا عضویت</string>
    <string name="splash_btn_first_start">اولین شروع</string>
    <string name="sign_out_text">خروج</string>
    <!--..........................................Indicator Layout...............................-->
    <string name="next">بعدی</string>
    <string name="previus">قبلی</string>
    <string name="skip">بی خیال</string>
    <!--......................................Select Team Activity...............................-->
    <string name="chose_team">تیم های مورد علاقه ی خود را انتخاب کنید</string>
    <string name="chose_league">لیگ مورد علاقه ی خود را انتخاب کنید</string>
    <string name="iran_league">لیگ خلیج فارس</string>
    <string name="other_league">لیگ های جهانی</string>
    <!--......................................No Internet Dialog.................................-->
    <string name="no_internet_dialog_title">خطا اینترنت</string>
    <string name="no_internet_dialog_msg">برای ادامه باید دسترسی‌ به اینترنت داشته باشید</string>
    <string name="setting_string_for_dialog_box">تنظیمات</string>
    <string name="cancel_string_for_dialog_box">صرف نظر</string>
    <!--......................................Tutorial Page......................................-->
    <string name="tt_goto_next">ورود</string>
    <string name="tt_step1">قدم اول</string>
    <string name="tt_step2">قدم دوم</string>
    <string name="tt_step3">قدم سوم</string>
    <string name="tt_step4">قدم چهارم</string>
    <string name="tt_step5">قدم پنجم</string>

    <string name="tt_des1">شرح قدم اول</string>
    <string name="tt_des2">شرح قدم دوم</string>
    <string name="tt_des3">شرح قدم سوم</string>
    <string name="tt_des4">شرح قدم چهارم</string>
    <string name="tt_des5">شرح قدم پنجم</string>
    <!--........................................Sign Page........................................-->
    <string name="sp_user_name">نام کاربری یا ایمیل</string>
    <string name="sp_pass">رمز عبور</string>
    <string name="sp_email">ایمیل</string>
    <string name="sp_rpass">تکرار رمز عبور</string>
    <string name="sp_forgot_pass">رمزم را فراموش کردم</string>
    <string name="sp_sign_in">ورود به حساب کاربری</string>
    <string name="sp_sign_up">ساخت حساب کاربری</string>
    <string name="sp_sign_out">خروج</string>
    <string name="sp_save_up">ذخیره ی حساب کاربری</string>
    <string name="sp_inter_email">برای بازیابی رمز عبور باید ایمیل خود را وارد کنید</string>
    <string name="sp_user">نام کاربری</string>
    <string name="sp_send_pass">ارسال رمز عبور</string>
    <string name="sp_back">برگشت</string>
    <!--........................................-->
    <string name="title_activity_start">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_aid_page">AidPage</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_select_team">SelectTeamActivity</string>
    <string name="title_activity_sign_page">SignPage</string>
</resources>
