<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fereshte.fourfourtow.SignPage"
    android:background="@drawable/sign">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:text="@string/sp_sign_in"
        android:id="@+id/btn_signin"
        android:background="@color/green_in"
        android:textColor="@color/text_color1"
        android:textSize="@dimen/splash_text_size2"
        android:visibility="visible"
        android:layout_above="@+id/btn_signun"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:text="@string/sp_sign_up"
        android:id="@+id/btn_signun"
        android:background="@color/blue_up"
        android:textColor="@color/text_color1"
        android:textSize="@dimen/small_text_size"
        android:visibility="visible"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="40dp"
        android:id="@+id/relativeLayout2">

        <ImageView
            android:layout_width="@dimen/sign_img_size"
            android:layout_height="@dimen/sign_img_size"
            android:id="@+id/iv_sign_1"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/user" />

        <EditText
            android:layout_width="@dimen/sign_tv_size"
            android:layout_height="wrap_content"
            android:id="@+id/et_sign_1"
            android:layout_alignTop="@+id/iv_sign_1"
            android:layout_toLeftOf="@+id/iv_sign_1"
            android:layout_toStartOf="@+id/iv_sign_1"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/norm_text_size"
            android:textColor="@color/tc_white"
            android:textColorHint="@color/tc_gray2"
            android:gravity="right" />

        <ImageView
            android:layout_width="@dimen/sign_img_size"
            android:layout_height="@dimen/sign_img_size"
            android:id="@+id/iv_sign_2"
            android:src="@drawable/pass"
            android:layout_below="@+id/iv_sign_3"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="@dimen/sign_tv_size"
            android:layout_height="wrap_content"
            android:id="@+id/et_sign_2"
            android:layout_alignTop="@+id/iv_sign_2"
            android:layout_toLeftOf="@+id/iv_sign_2"
            android:layout_toStartOf="@+id/iv_sign_2"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/norm_text_size"
            android:password="true"
            android:textColor="@color/tc_white"
            android:textColorHint="@color/tc_gray2"
            android:gravity="right" />

        <ImageView
            android:layout_width="@dimen/sign_img_size"
            android:layout_height="@dimen/sign_img_size"
            android:id="@+id/iv_sign_3"
            android:layout_below="@+id/iv_sign_1"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/email"
            android:visibility="gone" />

        <EditText
            android:layout_width="@dimen/sign_tv_size"
            android:layout_height="wrap_content"
            android:id="@+id/et_sign_3"
            android:layout_alignTop="@+id/iv_sign_3"
            android:layout_toLeftOf="@+id/iv_sign_3"
            android:layout_toStartOf="@+id/iv_sign_3"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/norm_text_size"
            android:password="false"
            android:textColor="@color/tc_white"
            android:visibility="gone"
            android:textColorHint="@color/tc_gray2"
            android:gravity="right" />

        <ImageView
            android:layout_width="@dimen/sign_img_size"
            android:layout_height="@dimen/sign_img_size"
            android:id="@+id/iv_sign_4"
            android:layout_below="@+id/iv_sign_2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:visibility="gone" />

        <EditText
            android:layout_width="@dimen/sign_tv_size"
            android:layout_height="wrap_content"
            android:id="@+id/et_sign_4"
            android:layout_alignTop="@+id/iv_sign_4"
            android:layout_toLeftOf="@+id/iv_sign_4"
            android:layout_toStartOf="@+id/iv_sign_4"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/norm_text_size"
            android:password="true"
            android:textColor="@color/tc_white"
            android:visibility="gone"
            android:textColorHint="@color/tc_gray2"
            android:gravity="right" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sp_forgot_pass"
        android:id="@+id/tv_sign_forgot"
        android:textColor="@color/tc_white"
        android:textSize="@dimen/title_text_size"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

</RelativeLayout>
